examples/tactics/neg/NatNeg.fst.hints
[ "┐▒Ў╘╤P.\rпо\u001bTМOЮ╜", [] ]